[gd_scene load_steps=24 format=2]

[ext_resource path="res://Environmnent/Items/Nut.tscn" type="PackedScene" id=1]
[ext_resource path="res://Environmnent/Core/Home.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Models/Bee/bie.glb" type="PackedScene" id=4]
[ext_resource path="res://Proto/Mobs/Vision/Mob.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level0.tscn" type="PackedScene" id=6]
[ext_resource path="res://Environmnent/Items/EnergyDrink.tscn" type="PackedScene" id=7]
[ext_resource path="res://Demo/UI.gd" type="Script" id=8]
[ext_resource path="res://Demo/Demo.gd" type="Script" id=9]
[ext_resource path="res://Proto/Mobs/Path1/Mob.gd" type="Script" id=10]
[ext_resource path="res://Environmnent/Utils/Path/Path.gd" type="Script" id=11]

[sub_resource type="BoxShape" id=8]

[sub_resource type="SphereMesh" id=5]
radius = 0.5
height = 1.0

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1.2, 1, 1.2 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Rowdies-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 42
outline_size = 6
outline_color = Color( 0.207843, 0.776471, 0.427451, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 72
outline_size = 4
outline_color = Color( 0.207843, 0.776471, 0.427451, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 42
outline_size = 4
outline_color = Color( 0.776471, 0.207843, 0.207843, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Assets/fonts/Rowdies-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 42
outline_size = 4
outline_color = Color( 0.207843, 0.776471, 0.427451, 1 )
extra_spacing_bottom = 8
font_data = SubResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 8
outline_color = Color( 0.207843, 0.776471, 0.427451, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 4
outline_color = Color( 0.207843, 0.776471, 0.427451, 1 )
font_data = SubResource( 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 9 )

[node name="CountDown" type="Timer" parent="."]
wait_time = 90.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.0013, -11.9994, -8.01885 )
speed = 1500.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 28.0374, 0 )

[node name="Labyrint" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.81046, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.875055, -0.454109, 0.167526, -0.460618, -0.887598, 6.86374e-09, 0.148696, -0.0771655, -0.985868, 0, 0, 0 )

[node name="Home" parent="." instance=ExtResource( 2 )]
transform = Transform( 3.99611, 0.0505306, 0.169025, -0.094448, 3.8497, 1.08207, -0.149004, -1.08501, 3.84715, 6.34074, -17.3773, -21.3639 )

[node name="Nuts" type="Node" parent="."]

[node name="Nut" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 3.8161, -1.19889, 0, 1.19889, 3.8161, 0, 0, 0, 4, -38.1021, -12.5, 17.2258 )

[node name="Nut2" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 3.75272, 0, 1.3846, 0.558019, 3.66077, -1.51241, -1.26717, 1.61207, 3.43446, -38.1021, -12.5, -5.32225 )

[node name="Nut3" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 3.9994, 0, -0.0691116, -0.0206465, 3.81734, -1.19479, 0.0659555, 1.19496, 3.81677, -10.2017, -12.5, -17.8029 )

[node name="Nut4" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 2.96608, 2.68373, 0, -2.68373, 2.96608, 0, 0, 0, 4, -10.2017, -12.5, 10.1791 )

[node name="Nut5" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 3.98066, 0.392833, 0, -0.392833, 3.98066, 0, 0, 0, 4, -18.115, -12.5, -1.4869 )

[node name="Nut6" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 3.69605, -1.52944, 0, 1.50555, 3.63832, 0.704216, -0.269265, -0.650705, 3.93752, 13.7012, -12.5, -2.13955 )

[node name="Nut7" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 18.3513, -12.5, 18.0923 )

[node name="Nut8" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 3.72504, 1.45743, 0, -1.41891, 3.6266, -0.913471, -0.332829, 0.850679, 3.8943, 22.0139, -12.5, -17.6461 )

[node name="Nut9" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 3.72863, -0.964832, -1.08001, 0.631022, 3.76733, -1.18702, 1.30351, 0.936115, 3.66395, 29.7832, -12.5, -17.6461 )

[node name="Nut10" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 37.8853, -12.5, -17.6461 )

[node name="Nut11" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 3.93812, 0.511102, -0.479554, -0.495395, 3.96603, 0.158733, 0.495764, -0.0968849, 3.96798, 37.8853, -12.5, 6.21651 )

[node name="Nut12" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 25.3436, -12.5, 6.21651 )

[node name="EnergyDrinks" type="Node" parent="."]

[node name="EnergyDrink" parent="EnergyDrinks" instance=ExtResource( 7 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, -25.756, -12.2117, -5.89961 )

[node name="EnergyDrink3" parent="EnergyDrinks" instance=ExtResource( 7 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 34.0965, -12.2117, -13.7975 )

[node name="EnergyDrink4" parent="EnergyDrinks" instance=ExtResource( 7 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 1.86162, -12.2117, 25.5194 )

[node name="Fox" parent="." instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 11.3038, -13.8008, -1.62849 )
speed = 5.0

[node name="rev" parent="Fox" index="0"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="RayCast" parent="Fox" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0857697, 1.98136, 0.797431 )
cast_to = Vector3( 0, 0, 2 )

[node name="Area" type="Area" parent="Fox"]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Fox/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19209e-07, 1.11469, 1.42817 )
shape = SubResource( 8 )

[node name="Path0" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Point" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.73286, -13, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point2" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.6858, -13, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point2"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point3" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.6858, -13, 6.52034 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point3"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point4" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -37.851, -13, 6.52034 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point4"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point5" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -37.851, -13, -14.2964 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point5"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point6" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.3119, -13, -14.2964 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point6"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point7" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.3119, -13, -17.9403 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point7"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point8" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0735, -13, -17.9403 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point8"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point9" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0735, -13, -10.4391 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point9"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point10" type="Spatial" parent="Path0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.20492, -13, -9.90416 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path0/Point10"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Path1" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Point" type="Spatial" parent="Path1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38.032, -13, 17.7805 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path1/Point"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point2" type="Spatial" parent="Path1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38.032, -13, -5.69996 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path1/Point2"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point3" type="Spatial" parent="Path1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.1605, -13, -5.69996 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path1/Point3"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point4" type="Spatial" parent="Path1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.1605, -13, -13.6352 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path1/Point4"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point5" type="Spatial" parent="Path1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.1605, -13, -18.121 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path1/Point5"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point6" type="Spatial" parent="Path1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 37.7672, -13, -18.121 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path1/Point6"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Path2" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Point" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.00975, -13, 18.5972 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point3" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.40659, -13, 10.343 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point3"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point4" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9942, -13, 10.343 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point4"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point5" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9148, -13, 2.72365 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point5"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point6" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.64114, -13, 2.72365 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point6"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point7" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.64114, -13, -2.11779 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point7"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point8" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.33975, -13, -2.11779 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point8"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point9" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1334, -13, 5.89836 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point9"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point10" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.832, -13, 5.819 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point10"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Point11" type="Spatial" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.832, -13, 18.2798 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Path2/Point11"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Bee0" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.68125, -12.7264, 2.11076 )
collision_layer = 0
script = ExtResource( 10 )
loop = true

[node name="Model" parent="Bee0" instance=ExtResource( 4 )]
transform = Transform( -2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, 0.62, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Bee0"]
shape = SubResource( 7 )

[node name="Bee1" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38.1382, -12.7264, 17.3914 )
collision_layer = 0
script = ExtResource( 10 )

[node name="Model" parent="Bee1" instance=ExtResource( 4 )]
transform = Transform( -2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, 0.62, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Bee1"]
shape = SubResource( 7 )

[node name="Bee2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9042, -12.7264, 18.6053 )
collision_layer = 0
script = ExtResource( 10 )
loop = true

[node name="Model" parent="Bee2" instance=ExtResource( 4 )]
transform = Transform( -2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, 0.62, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Bee2"]
shape = SubResource( 7 )

[node name="UI" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Time" type="Label" parent="UI/HUD"]
anchor_right = 1.0
margin_top = 15.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="GridContainer" type="GridContainer" parent="UI/HUD"]
margin_left = 16.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 167.0

[node name="Carrying" type="Label" parent="UI/HUD/GridContainer"]
margin_right = 130.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = "0/0"
align = 1

[node name="Storage" type="Label" parent="UI/HUD/GridContainer"]
margin_top = 57.0
margin_right = 130.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
text = "00/00"
align = 1

[node name="SplashScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundColor" type="ColorRect" parent="UI/SplashScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.47451 )

[node name="Title" type="Label" parent="UI/SplashScreen"]
anchor_top = 0.116
anchor_right = 1.0
anchor_bottom = 0.116
margin_bottom = 80.0
custom_fonts/font = SubResource( 9 )
text = "Nut Mania"
align = 1

[node name="Description" type="Label" parent="UI/SplashScreen"]
anchor_top = 0.376
anchor_right = 1.0
anchor_bottom = 0.376
margin_bottom = 109.0
custom_fonts/font = SubResource( 10 )
text = "Collect every nut and store them
in your tree before the time runs out."
align = 1
valign = 1

[node name="Controls" type="Label" parent="UI/SplashScreen"]
anchor_top = 0.822
anchor_right = 1.0
anchor_bottom = 0.822
margin_top = -109.0
custom_fonts/font = SubResource( 12 )
text = "Controls: WASD & SPACE.
Press SPACE to start!"
align = 1

[node name="PauseScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundColor" type="ColorRect" parent="UI/PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.47451 )

[node name="Title" type="Label" parent="UI/PauseScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -45.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 9 )
text = "PAUSED"
align = 1

[node name="GameOverScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundColor2" type="ColorRect" parent="UI/GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.47451 )

[node name="CenterContainer" type="CenterContainer" parent="UI/GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="UI/GameOverScreen/CenterContainer"]
margin_left = 339.0
margin_top = 224.0
margin_right = 685.0
margin_bottom = 376.0
custom_constants/vseparation = 32

[node name="Title" type="Label" parent="UI/GameOverScreen/CenterContainer/GridContainer"]
margin_right = 346.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Game Over"
align = 1

[node name="Status" type="Label" parent="UI/GameOverScreen/CenterContainer/GridContainer"]
margin_top = 112.0
margin_right = 346.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 4 )
text = "Lorem Ipsum"
align = 1

[connection signal="body_entered" from="Fox/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Bee0" to="." method="_on_Bee0_body_entered"]
[connection signal="body_entered" from="Bee1" to="." method="_on_Bee1_body_entered"]
[connection signal="body_entered" from="Bee2" to="." method="_on_Bee1_body_entered"]

[editable path="Player"]
[editable path="Player/Model"]
[editable path="Home"]
[editable path="Fox"]
[editable path="Fox/rev"]
